# ResuMariner

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yaml  mypy.ini  package-lock.json  pytest.ini  requirements-test.txt  test_script.py  traefik-dashboard-users.example
.github/workflows/: ci-cd.yml  cv-intake-service.yml  cv-processing-service.yml  cv-search-service.yml  cv-storage-service.yml  main.yml  mypy.yml  publish-images.yml  ruff.yml  test.yml  tests.yml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt  test_script.py
backend/backend/: asgi.py  checks.py  settings.py  urls.py
backend/core/: apps.py  database.py  exception_handler.py  file_types.py  metrics.py  middleware.py  model_registry.py  tests.py
backend/core/domain/: __init__.py  extraction.py  processing.py  rag.py  resume.py  review.py  search.py
backend/core/management/commands/: init_databases.py  init_models.py
backend/core/models/: neo4j_models.py
backend/core/services/: embedding_service.py  graph_db_service.py  vector_db_service.py
backend/docs/: pydantic-neomodel-dict-unique-node-fix.md  rag-features.md  rate-limiting.md  search-service-composition.md  vector-search-architecture.md
backend/processor/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/processor/management/commands/: cleanup_jobs.py  intake_worker.py
backend/processor/services/: cleanup_service.py  content_structure_service.py  file_service.py  job_service.py  llm_service.py  processing_service.py  resume_embedding_extractor.py  resume_service.py  review_service.py
backend/processor/services/parsing/: __init__.py  base_extraction_service.py  parse_image_service.py  parse_pdf_service.py  parse_word_service.py  parsing_service.py
backend/processor/utils/: circuit_breaker.py  email_extractor.py  redis_queue.py
backend/processor/workers/: __init__.py  base.py  cleanup.py  processing.py  registry.py
backend/rag/: serializers.py  urls.py  views.py
backend/rag/services/: rag_service.py
backend/search/: serializers.py  tests.py  urls.py  views.py
backend/search/services/: __init__.py  graph_search.py  hybrid_search.py  result_enrichment.py  search_coordinator.py  vector_search.py
backend/storage/: neo4j_models.py  serializers.py  tests.py  urls.py  views.py
backend/storage/services/: __init__.py  graph_db_service.py  vector_db_service.py
cv-intake-service/: Dockerfile  app.py  config.py  requirements.txt  worker.py
cv-intake-service/models/: job.py
cv-intake-service/repositories/: job_repository.py
cv-intake-service/routes/: cv_routes.py
cv-intake-service/services/: file_service.py  job_service.py  processing_service.py
cv-intake-service/tests/: conftest.py
cv-intake-service/utils/: circuit_breaker.py  errors.py  health_checks.py  logger.py  redis_queue.py  security.py
cv-processing-service/: Dockerfile  app.py  config.py  requirements.txt
cv-processing-service/models/: processing_models.py  resume_models.py
cv-processing-service/parsers/: base_extraction_service.py  parse_image_service.py  parse_pdf_service.py
cv-processing-service/routes/: processing_routes.py
cv-processing-service/services/: content_structure_service.py  embedding_service.py  llm_service.py  processing_service.py  review_service.py
cv-processing-service/tests/: conftest.py
cv-processing-service/utils/: errors.py  logger.py
cv-search-service/: app.py  config.py  requirements.txt
cv-search-service/models/: search_models.py
cv-search-service/routes/: search_routes.py
cv-storage-service/: Dockerfile  app.py  config.py  requirements.txt
frontend/: .gitignore  Dockerfile  README.md  index.html  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
monitoring/: README.md  prometheus.yml
(+107 files in other folders)
